2003-03-27  Theodore A. Roth  <troth@openavr.org>
[Contributed by James Harris <James.Harris@codan.com.au>]

	* src/jtag.h: Remove unused deviceType enum.
	* src/jtagprog.cc: Tell the jtagbox the device dependant flash and
	eeprom pagesizes based on device definition info.

2003-03-26  Theodore A. Roth  <troth@openavr.org>
[Contributed by Jeff Rose <rosejn@Colorado.EDU>]

	* src/jtagio.cc (getJtagResponse): Use JTAG_RESPONSE_TIMEOUT instead
	of JTAG_COMM_TIMEOUT when reading the response from the jtag box.
	* src/main.cc: Don't require hostname and portnumber options if they
	aren't needed.

2003-03-25  Theodore A. Roth  <troth@openavr.org>
[Contributed by James Harris <James.Harris@codan.com.au>]

	* src/jtag.h: Add jtag_device_def_type structure.
	Add various missing jtag values.
	* src/jtagio.cc: Add auto detection and configuration of target device.
	Always report jtag box hw and sw versions.
	* src/main.cc: Add --part command line option.

2003-03-17  Theodore A. Roth  <troth@openavr.org>

	* Bootstrap: Add "-a -c" to second call to automake so depcomp will be
	installed if it is missing.

2003-02-28  Theodore A. Roth  <troth@openavr.org>

	* AUTHORS: New file.
	* Bootstrap: Allow user to specify which versions of the auto tools
	to use by setting environment variables.
	* ChangeLog: New file.
